# -CUDA-optimization-lib-

./: CMakeLists.txt  README.md
examples/: CMakeLists.txt  elementwise_example.cpp  reduce_example.cpp
include/cuda_opt/: cuda_utils.cuh  elementwise.cuh  reduce.cuh
src/: CMakeLists.txt
src/elementwise/: elementwise.cu
src/reduce/: reduce.cu
